# src/ldap3_demo/controllers/ldap_controller.py
@@ -1,19 +1,26 @@
 #!/usr/bin/env python3
-
+from confuse import Configuration
 from typing import Any
+from typing import List
+from typing import Optional
 from flask import Response
 from ldap3 import Connection
 from ldap3.core.exceptions import LDAPInvalidDnError
 from ldap3.utils.conv import escape_filter_chars
+
+from ldap3_demo.controllers.connection_manager import ConnectionManager
 from ldap3_demo.dtos.add_entry_request import AddEntryRequest
 from ldap3_demo.dtos.modify_entry_request import ModifyEntryRequest
 from ldap3_demo.dtos.search import Search
 from ldap3_demo.schemas.add_entry_request_schema import AddEntryRequestSchema
 from ldap3_demo.schemas.modify_entry_request_schema import ModifyEntryRequestSchema
-from ldap3_demo.app import connection_manager
 
 
 class LdapController:
+
+    def __init__(self):
+        config = Configuration('ldap3_demo', __name__)
+        self.connection_manager = ConnectionManager(config['ldap'].get(dict))
 
     @staticmethod
     def scrub_json(source) -> None:
@@ -46,7 +53,7 @@ class LdapController:
     # This method adds a new entry to LDAP. The dn must be unique and must match the dn
     # attribute in the AddEntryRequest.
     def add(self, server_name: str, add_entry_request: AddEntryRequest) -> bool:
-        connection: Connection = connection_manager.get_connection(server_name, None)
+        connection: Connection = self.connection_manager.get_connection(server_name, None)
         connection.bind()
         schema = AddEntryRequestSchema()
 
@@ -81,16 +88,16 @@ class LdapController:
 
     # This method modifies an existing entry ing LDAP. The dn must match an existing entity.
     def modify(self, server_name: str, modify_entry_request: ModifyEntryRequest) -> bool:
-        connection: Connection = connection_manager.get_connection(server_name, None)
+        connection: Connection = self.connection_manager.get_connection(server_name, None)
         connection.bind()
         schema = ModifyEntryRequestSchema()
         changes = modify_entry_request['changes']
 
         json = schema.dump(modify_entry_request)
         if 'controls' in json:
-            connection.modify(modify_entry_request.dn, modify_entry_request['changes'], json['controls'])
+            connection.modify(modify_entry_request.dn, changes, json['controls'])
         else:
-            connection.modify(modify_entry_request.dn, modify_entry_request['changes'])
+            connection.modify(modify_entry_request.dn, changes)
 
         result_description = connection.result["description"]
         if result_description != 'success':
@@ -101,8 +108,8 @@ class LdapController:
 
         return True
 
-    def search(self, server_name: str, s: Search) -> list:
-        connection: Connection = connection_manager.get_connection(server_name, None)
+    def search(self, server_name: str, s: Search) -> List[Optional[Any]]:
+        connection: Connection = self.connection_manager.get_connection(server_name, None)
         connection.bind()
         connection.search(search_base=s.search_base,
                           search_filter=s.search_filter,
@@ -117,19 +124,26 @@ class LdapController:
                           paged_size=s.paged_size,
                           paged_criticality=s.paged_criticality,
                           paged_cookie=s.paged_cookie)
-        if connection.result["description"] != 'success':
-            return Response(
-                f'A search error occurred: {connection.last_error}',
-                status=500,
-            )
+        print(connection)
+        if connection.result is None:
+            print('connection result is None')
+            return []
+        if 'description' in connection.result:
+            description = connection.result['description']
+            print(f'Description: {description}')
+            if description == 'success':
+                return connection.entries
+            elif description != 'noSuchObject':
+                return Response(f'A search error occurred: {description}', status=500 )
 
-        return connection.entries
+        return []
 
     def delete(self, server_name: str, dn: Any, controls: Any = None) -> bool:
-        connection: Connection = connection_manager.get_connection(server_name, None)
+        connection: Connection = self.connection_manager.get_connection(server_name, None)
         connection.bind()
         try:
-            return connection.delete(dn, controls=controls)
+            connection.delete(dn, controls=controls)
+            return True
         except LDAPInvalidDnError:
             # Ignore error if the dn does not exist.
             return True
